[chat] add latest offer to chat
