# app/Models/Chat.php
@@ -8,11 +8,11 @@ class Chat extends Model
 {
     protected $fillable = ['product_id', 'buyer_id', 'seller_id'];
 
-    protected $appends = ['name', 'users'];
+    protected $appends = ['name', 'users' , 'product_image'];
 
-    protected $with = ['seller', 'buyer'];
+    protected $with = ['seller', 'buyer' , 'offers' , 'product'];
 
-    protected $hidden = ['product'];
+    protected $hidden = ['product' , 'seller', 'buyer' , 'offers'];
 
     public function messages()
     {
@@ -39,8 +39,46 @@ class Chat extends Model
         return $this->product?->name;
     }
 
+    public function offers()
+    {
+        return $this->hasMany(Offer::class);
+    }
+
     public function getUsersAttribute()
     {
         return collect([$this->buyer, $this->seller])->filter();
+    }
+
+    public static function getChatsWithProductSummary(int $userId)
+    {
+        return self::with([
+                'product' => function ($query) {
+                    $query->select('id', 'name')
+                        ->with([
+                            'images' => function ($q) {
+                                $q->limit(1);
+                            },
+                        ]);
+                },
+                'buyer',
+                'seller',
+                'latestOffer'
+            ])
+            ->withCount([
+                'messages as unseen_messages_count' => function ($query) use ($userId) {
+                    $query->where('sender_id', '!=', $userId)
+                        ->whereNull('seen_at');
+                }
+            ]);
+    }
+
+    public function getProductImageAttribute()
+    {
+        return $this->product->images->first()?->image_url;
+    }
+
+    public function latestOffer()
+    {
+        return $this->hasOne(Offer::class)->latestOfMany();
     }
 }
